<resources>
    <string name="app_name">Flinder</string>

    <!-- Login -->
    <string name="email_login">Email</string>
    <string name="password_login">Contraseña</string>
    <string name="btnLogin_login">Iniciar Sesión</string>
    <string name="btnSignUp_login">Regístrate</string>
    <string name="rememberPassword_login"><u>¿Has olvidado tu contraseña?</u></string>

    <!-- Bottom Menu -->
    <string name="home_menu">Principal</string>
    <string name="course_menu">Curso</string>
    <string name="profile_menu">Perfil</string>

    <!-- Buttons -->
    <string name="showCalendar_btn">Ver calendario</string>

    <!-- Profile -->
    <string name="subject_profile">Asignaturas</string>
    <string name="about_profile">Acerca de</string>
    <string name="logout">Cerrar sesión</string>

    <!-- About -->
    <string name="version_about">Versión</string>
    <string name="author_about">Autor</string>
    <string name="country_about">España</string>
    <string name="gitgub_about">Mi Github</string>

    <!-- Course -->
    <string name="addSubject_course">Añadir asignatura</string>
    <string name="homeworkWeight_course">Peso de tareas</string>
    <string name="statistics_course">Estadísticas</string>
    <string name="calendar_course">Calendario</string>

</resources>
