<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorPrimary"
    tools:context="com.jaime.fisheri.LoginActivity">

    <EditText
        android:id="@+id/edt_email_login"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="@drawable/shape_rounded_rectangle"
        android:gravity="center"
        android:hint="@string/email_login"
        android:inputType="textEmailAddress"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp" />

    <EditText
        android:id="@+id/edt_password_login"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="@drawable/shape_rounded_rectangle"
        android:gravity="center"
        android:hint="@string/password_login"
        android:inputType="textPassword"
        android:layout_below="@id/edt_email_login"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"/>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@id/edt_password_login"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/shape_rounded_rectangle"
        android:backgroundTint="@color/green"
        android:text="@string/btnLogin_login"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/txv_rememberPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_login"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="6dp"
        android:text="@string/rememberPassword_login"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/btn_signUp"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@id/txv_rememberPassword"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:layout_marginTop="230dp"
        android:background="@drawable/shape_rounded_rectangle"
        android:backgroundTint="@color/green"
        android:text="@string/btnSignUp_login"
        android:textColor="@android:color/white" />
</RelativeLayout>
